--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -138,5 +138,5 @@ target_link_libraries(stippling otapputils otlib ${ALLLIBS})
 add_executable(barycenters apps/barycenters.cpp)
 target_link_libraries(barycenters otapputils otlib ${ALLLIBS})
 
-add_executable(transport_points apps/transport_points.cpp)
-target_link_libraries(transport_points otapputils otlib ${ALLLIBS} ${CERES_LIBRARIES})
+add_executable(caustic_design apps/caustic_design.cpp)
+target_link_libraries(caustic_design otapputils otlib ${ALLLIBS} ${CERES_LIBRARIES})
